--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
                                 <a href="{% url 'profile' %}" class="dropdown-item">
                                     Профиль
                                 </a>
-                                {% if not user.is_admin_user %}
+                                {% if not user.is_admin_user and not user.is_psychologist %}
                                     <a href="{% url 'application_create' %}" class="dropdown-item">
                                         Подать заявку
                                     </a>
